feat(gui): scout list works with real data, authenticated
