# pkg/common/src/openapi.json
@@ -22,6 +22,29 @@
         "parameters": [
           {
             "in": "query",
+            "name": "sortFieldName",
+            "schema": {
+              "type": "string",
+              "minLength": 1,
+              "maxLength": 1024,
+              "default": "city"
+            },
+            "required": false,
+            "description": "The name of the column in the SQL database table to sort the results based on."
+          },
+          {
+            "in": "query",
+            "name": "sortDirection",
+            "schema": {
+              "type": "string",
+              "enum": ["asc", "desc"],
+              "default": "asc"
+            },
+            "required": false,
+            "description": "The direction in which the retrieved data should be sorted. Defaults to ascending."
+          },
+          {
+            "in": "query",
             "name": "page",
             "schema": {
               "type": "integer",
@@ -29,6 +52,7 @@
               "minimum": 1,
               "maxItems": 99999
             },
+            "required": true,
             "description": "Page number for pagination (default is 1)"
           },
           {
@@ -37,9 +61,10 @@
             "schema": {
               "type": "integer",
               "default": 10,
-              "minimum": 1,
-              "maximum": 100
+              "minimum": 5,
+              "maximum": 500
             },
+            "required": true,
             "description": "Number of records per page (default is 10)"
           }
         ],
@@ -50,6 +75,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
+                  "required": ["data", "sorting", "pagination"],
                   "properties": {
                     "data": {
                       "type": "array",
@@ -57,8 +83,29 @@
                         "$ref": "#/components/schemas/Scout"
                       }
                     },
+                    "sorting": {
+                      "type": "object",
+                      "properties": {
+                        "sortDirection": {
+                          "type": "string",
+                          "enum": ["asc", "desc"]
+                        },
+                        "sortFieldName": {
+                          "type": "string",
+                          "minLength": 1,
+                          "maxLength": 1024
+                        }
+                      },
+                      "required": ["sortDirection", "sortFieldName"]
+                    },
                     "pagination": {
                       "type": "object",
+                      "required": [
+                        "totalRecords",
+                        "totalPages",
+                        "currentPage",
+                        "pageSize"
+                      ],
                       "properties": {
                         "totalRecords": {
                           "type": "integer"
